--- a/data/social.yaml
+++ b/data/social.yaml
@@ -1,19 +1,10 @@
 social:
-- icon: facebook-square
-  icon_pack: fab
-  link: https://twitter.com/apreshill
-- icon: instagram
-  icon_pack: fab
-  link: https://twitter.com/apreshill
 - icon: twitter
   icon_pack: fab
-  link: https://twitter.com/apreshill
+  link: https://twitter.com/ma_salmon
 - icon: github
   icon_pack: fab
-  link: https://github.com/apreshill
-- icon: linkedin
-  icon_pack: fab
-  link: https://www.linkedin.com/in/alisonpresmaneshill/
+  link: https://github.com/maelle
 - icon: rss
   icon_pack: fas
   link: /blog/index.xml
