--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://cranky-lalande-e3373f.netlify.app/
+baseURL: https://thirsty-meitner-662298.netlify.app/
 languageCode: en
 title: Blogophonic
 author: Hi there
